fixed book covers

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,12 +16,12 @@ section {
 	box-shadow: 0px 0px 10px 0px rgb(0, 68, 196);
 	padding-top: 5px;
 	padding-bottom: 5px;
-	background: #FFFFFF;
+    background: #ffffff;
 	margin-left: 5px;
 	margin-right: 5px;
 }
 
-footer{
+footer {
 	margin-top: 20px;
 	margin-bottom: 20px;
 	font-size: 75%;
@@ -31,7 +31,7 @@ nav {
 	display: block;
 }
 
-a{
+a {
 	color: rgb(0, 0, 238);
 }
 
@@ -63,22 +63,22 @@ Generic
 Navbar
 */
 
-nav>ul {
+nav > ul {
 	list-style-type: none;
 	padding: 0;
 	text-align: center;
 	margin-top: 0;
 }
 
-nav>ul>li {
+nav > ul > li {
 	display: inline-block;
 }
 
-nav>ul>li::after {
+nav > ul > li::after {
 	content: " | ";
 }
 
-nav>ul>li:nth-last-of-type(1)::after {
+nav > ul > li:nth-last-of-type(1)::after {
 	content: "";
 }
 
@@ -94,7 +94,7 @@ Flex
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-evenly;
+    justify-content: center;
 	align-items: stretch;
 	align-content: flex-start;
 	height: 100%;
@@ -142,6 +142,10 @@ Images
 	max-width: 100%;
 	min-width: 100px;
 }
+
+.img-border {
+    border: 1px solid black;
+}
 /*
 Text
 */
@@ -170,26 +174,26 @@ p {
 	font-size: 75%;
 }
 
-.text-md{
+.text-md {
 	font-size: 90%;
 }
 
-.text-no-style{
+.text-no-style {
 	text-decoration: none;
 	font-weight: normal;
 }
 
-.qa-cell{
+.qa-cell {
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
-.qa-q{
+.qa-q {
 	font-weight: bold;
 	display: block;
 }
 
-.qa-a{
+.qa-a {
 	display: block;
 }
 
@@ -198,10 +202,10 @@ Media Queries
 */
 
 @media screen and (max-width: 480px) {
-	nav>ul>li {
+    nav > ul > li {
 		display: block;
 	}
-	nav>ul>li::after {
+    nav > ul > li::after {
 		content: "";
 	}
 }
